# conspiracy-game

./: .gitignore  .pre-commit-config.yaml  conspiracy_prototype-0.2.0-py3-none-any.whl  pyproject.toml
engine/: __init__.py  __main__.py  characters.py  engine.py  entity.py  locations.py  player.py
engine/api/: __init__.py  characters.py  game.py  locations.py  player.py  webapp.py
