[project]
name = "conspiracy-prototype"
description = "Very simple implementation of a hypothetical conspiracy puzzle(ish) game"
version = "0.2.0"
authors = [
    { name = "Eric Scammell", email = "eric.scammell@gmail.com"}
]
dependencies = [
    "coloredlogs",
    "falcon"
]

[project.scripts]
conspiracy-backend = "conspiracy.engine:main"

[tool.setuptools.package-dir]
"conspiracy.engine" = "engine"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
